--- a/style.css
+++ b/style.css
@@ -28,6 +28,16 @@ body {
     color: var(--white);
 }
 
+.container {
+    width: 100%;
+    max-width: 1800px;
+    margin: auto;
+}
+
+ul {
+    list-style: none;
+}
+
 h1,
 h2,
 h3,
@@ -36,15 +46,36 @@ a {
     font-family: "Raleway", sans-serif;
 }
 
+a {
+    color: white;
+    text-decoration: none;
+}
+
+a:hover,
+a:focus {
+    text-decoration: underline;
+}
+
+img {
+    max-width: 100%;
+}
+
+p {
+    opacity: 0.9;
+}
+
 .header {
     background-color: var(--blue500);
+}
+
+.header .container {
     display: flex;
-    padding: 3rem;
+    padding: 5rem 4rem 3rem;
     align-items: center;
 }
 
 .header__logo {
-    width: 8rem;
+    width: 12rem;
 }
 
 .header__nav {
@@ -53,8 +84,7 @@ a {
 
 .header__navlinks {
     display: flex;
-    list-style: none;
-    gap: 2rem;
+    gap: 4rem;
 }
 
 .header__navlink a {
@@ -64,29 +94,27 @@ a {
 }
 
 .home__hero {
+    background: url(./images/bg-curvy-desktop.svg) left bottom no-repeat;
+    background-size: contain;
+    background-color: var(--blue500);
+}
+
+.home__hero .container {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 2rem;
+    max-width: 750px;
     margin: auto;
-    background: url(./images/bg-curvy-desktop.svg) left bottom no-repeat;
-    background-size: contain;
-    padding-bottom: 7rem;
-}
-
-.home__hero > * {
-    max-width: 35rem;
+    padding: 0 0rem 15rem;
 }
 
 .home__hero__image {
     width: 100%;
+    max-width: 800px;
 }
 
 .home {
-    background-color: var(--blue500);
-}
-
-.home__features {
     background-color: var(--blue700);
 }
 
@@ -96,23 +124,29 @@ a {
 }
 
 .home__title {
-    font-size: 2rem;
+    font-size: 3rem;
 }
 
 .home__desc {
-    font-size: 1.1rem;
+    font-size: 1.4rem;
+    width: 80%;
 }
 
 .btn {
     background: linear-gradient(90deg, var(--gradient));
     border: none;
-    padding: 0.75rem 2rem;
-    min-width: 15rem;
+    padding: 1rem 2.5rem;
     border-radius: 10rem;
-    color: white;
     font-weight: 700;
+    font-size: 1rem;
+    color: white;
     cursor: pointer;
     transition: transform 0.2s linear, box-shadow 0.2s linear;
+}
+
+.home__button {
+    min-width: 20rem;
+    font-size: 1.1rem;
 }
 
 .btn:hover,
@@ -123,12 +157,15 @@ a {
 
 /* -------------------------home-hero end----------------------------- */
 
-.home__features {
+.home__features .container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(17rem, 1fr));
     margin: auto;
-    gap: 5rem;
-    padding: 5rem;
+    align-content: center;
+    gap: 8rem 12rem;
+    padding-inline: 5rem;
+    max-width: 1050px;
+    margin-bottom: 10rem;
 }
 
 .home__feature {
@@ -142,4 +179,302 @@ a {
 
 .home__feature__title {
     margin-bottom: 0.5rem;
+}
+
+/* -----------------------------home-feature end----------------------- */
+
+.home__about .container {
+    display: flex;
+    align-items: center;
+    gap: 4rem;
+    margin-bottom: 10rem;
+    padding: 0 8rem;
+}
+
+.home__about__image {
+    width: 50%;
+    max-width: 50rem;
+}
+
+.home__about__title {
+    font-size: 3rem;
+    margin-bottom: 1rem;
+    padding-right: 1.1rem;
+}
+
+.home__about__desc {
+    font-size: 1.2rem;
+    margin-bottom: 1rem;
+}
+
+.home__about__link {
+    font-size: 1.2rem;
+    color: hsl(176, 68%, 64%);
+    padding-bottom: 0.3em;
+    border-bottom: 1px solid hsl(176, 68%, 64%);
+}
+
+/* -----------------------home-about end--------------------------- */
+
+.home__testimonials .container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 3rem;
+    padding: 0 10rem 25rem;
+    position: relative;
+}
+
+.quote {
+    position: absolute;
+    left: 9.5rem;
+    top: -2.5rem;
+    z-index: 1;
+}
+
+.home__testimonial {
+    padding: 2rem 1.5rem;
+    background-color: var(--blue600);
+    border-radius: 5px;
+    box-shadow: 5px 5px 20px hsl(0, 0%, 100%, 0.04);
+    z-index: 2;
+}
+
+.home__testimonial__content {
+    font-size: 1rem;
+    margin-top: 1rem;
+}
+
+.home__testimonial__user {
+    margin-top: 2rem;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.home__testimonial__userImage {
+    height: 2.5rem;
+    border-radius: 50%;
+}
+
+.home__testimonial__userName {
+    font-size: 0.9rem;
+}
+
+.home__testimonial__userPosition {
+    font-size: 0.7rem;
+}
+
+/* -----------------------testimonial end-------------------------- */
+
+.footer {
+    background-color: var(--blue800);
+    position: relative;
+    padding: 15rem 8rem 8rem;
+}
+
+.news-letter {
+    position: absolute;
+    background-color: var(--blue500);
+    padding: 3rem 5rem;
+    max-width: 60rem;
+    width: 95%;
+    left: 50%;
+    top: 0;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    border-radius: 5px;
+    box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.12);
+}
+
+.news-letter__desc {
+    margin-block: 1rem 2rem;
+    margin-inline: auto;
+    width: 90%;
+}
+
+.news-letter__title {
+    font-size: 2.2rem;
+}
+
+.news-letter__form {
+    display: flex;
+    justify-content: space-between;
+}
+
+.news-letter__input {
+    border: none;
+    border-radius: 10rem;
+    padding-inline: 2rem;
+    width: 65%;
+}
+
+.news-letter__input::placeholder {
+    opacity: 0.5;
+}
+
+.news-letter__button {
+    width: max-content;
+}
+
+.footer__logo {
+    margin-bottom: 2rem;
+    width: 10rem;
+}
+
+.footer__about {
+    display: grid;
+    grid-template-columns: 4fr 2fr 1fr 1fr 2fr;
+    gap: 2rem;
+}
+
+.footer__location {
+    display: flex;
+    align-items: flex-start;
+    gap: 1rem;
+    max-width: 25rem;
+    font-size: 1.1rem;
+}
+
+.footer__location img {
+    transform: translateY(6px);
+}
+
+.footer__contact__item {
+    display: flex;
+    gap: 1rem;
+    margin-bottom: 1rem;
+    align-items: center;
+}
+
+.footer__links {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    font-size: 1.1rem;
+}
+
+.footer__social {
+    display: flex;
+    gap: 1rem;
+    align-items: flex-start;
+}
+
+.social__icon {
+    width: 2rem;
+    height: 2rem;
+    border-radius: 50%;
+    border: 1px solid white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.social__icon i {
+    transform: translateY(1px);
+}
+
+@media (max-width: 1200px) {
+    .home__testimonials .container,
+    .home__about .container {
+        padding-inline: 2rem;
+    }
+
+    .home__features .container {
+        gap: 5rem;
+    }
+
+    .quote {
+        left: 1.5rem;
+    }
+
+    .footer {
+        padding-inline: 3rem;
+    }
+}
+
+@media (max-width: 1000px) {
+    .footer__about {
+        grid-template-columns: 1fr 1fr;
+        row-gap: 5rem;
+    }
+}
+
+@media (max-width: 800px) {
+    .header .container {
+        padding: 2rem 1rem 5rem;
+    }
+    .header__logo {
+        width: 7rem;
+    }
+    .home__title {
+        font-size: 2.5rem;
+        padding-inline: 1rem;
+    }
+    .home__desc {
+        font-size: 1.2rem;
+    }
+    .header__navlinks {
+        gap: 2rem;
+    }
+    .home__testimonials .container {
+        grid-template-columns: 1fr;
+    }
+
+    .home__testimonial {
+        max-width: 400px;
+        margin: auto;
+    }
+
+    .home__features .container {
+        grid-template-columns: 1fr;
+        gap: 8rem;
+    }
+
+    .home__about .container {
+        flex-direction: column;
+    }
+
+    .home__hero__image {
+        padding-inline: 2rem;
+    }
+
+    .home__about__image {
+        width: 90%;
+    }
+
+    .home__about .container br {
+        display: none;
+    }
+
+    .home__about__title {
+        font-size: 2rem;
+    }
+
+    .quote {
+        left: 1.5rem;
+    }
+
+    .news-letter__form {
+        flex-direction: column;
+        gap: 2rem;
+    }
+
+    .news-letter {
+        padding: 4rem 2rem;
+    }
+
+    .news-letter__input {
+        padding-block: 1rem;
+        width: 100%;
+    }
+    .news-letter__button {
+        width: 100%;
+    }
+
+    .footer {
+        padding-top: 20rem;
+    }
+    .footer__about {
+        grid-template-columns: 1fr;
+    }
 }
